[tool.poetry]
name = "gesture-mouse"
version = "0.3.2-alpha"
description = "A program that allows to control the mouse and keyboard with head movement and facial gestures."
authors = ["Patrick Link <https://github.com/linkhack>, Martin Deinhofer <https://github.com/deinhofer/>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/asterics/gesture_mouse.git"
keywords = ["head-mouse", "facial-gestures", "mediapipe","keyboard-emulation","mouse-emulation"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
case-insensitive-dictionary="0.2.1"
keyboard="0.13.5"
mediapipe="0.10.14"
mouse="0.7.1"
numpy=">2.0.1"
opencv-python="^4.10.0.84"
pynput="1.7.7"
pyqtgraph="0.13.7"
PySide6="6.7.2"
scikit-learn="1.5.1"
scipy="1.13.1"
screeninfo="0.8.1"
timecode="1.4.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "6.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
